--- a/assets/scss/constants.scss
+++ b/assets/scss/constants.scss
@@ -1,6 +1,9 @@
 $color-red: red;
 $grey: #777;
+$liteGrey: rgba(222, 222, 222, 0.3);
 $black: #0c0c0c;
+$white: #fff;
+$orange: #f19340;
 
 
 $generalFontSize_px: 16px;
