--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,6 +3,48 @@
 @import 'normoliseCSS';
 
 
+h3 {
+  margin-top: rem(15);
+  font-size: rem(20);
+  font-weight: 500;
+  line-height: rem(30);
+}
+
+.information-place {
+  box-sizing: border-box;
+  padding: rem(10) rem(10) rem(10) rem(40);
+  display: grid;
+  grid-template-columns: rem(260) 1fr;
+  grid-column-gap: rem(60);
+  grid-auto-rows: rem(20);
+  background: $white;
+  background-origin: padding-box;
+}
+
+.btn_common {
+  max-width: rem(180);
+  height: rem(40);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: $grey 1px solid;
+  cursor: pointer;
+
+  &:hover {
+    color: $grey;
+  }
+}
+
+.price {
+  font-size: rem(20);
+  font-weight: 700;
+  line-height: rem(20);
+
+  & :last-child {
+    color: $grey;
+    font-weight: 400;
+  }
+}
 
 
 
